--- a/app/src/main/res/layout/activity_event_assoc_edit.xml
+++ b/app/src/main/res/layout/activity_event_assoc_edit.xml
@@ -35,7 +35,7 @@
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="@string/item_id_label"
+                android:text="@string/event_id_label"
                 android:labelFor="@+id/event_id_field"
                 />
             <EditText
