--- a/app/src/main/res/layout/activity_link_types_edit.xml
+++ b/app/src/main/res/layout/activity_link_types_edit.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.database.editors.LocationsEditActivity">
+    tools:context=".activities.database.editors.LinkTypesEditActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -77,27 +77,17 @@
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="@string/type_id_label"
-                android:labelFor="@+id/type_id_field"
+                android:text="@string/speed"
+                android:labelFor="@+id/speed_field"
                 />
             <EditText
-                android:id="@+id/type_id_field"
-                android:layout_width="0dp"
+                android:id="@+id/speed_field"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:text=""
-                android:autofillHints="type_id" />
-            <Button
-                android:id="@+id/types_browse_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minHeight="0dp"
-                android:minWidth="0dp"
-                android:onClick="browseTypes"
-                android:text="@string/browse_button_label"
-                android:layout_gravity="end|center_vertical" />
+                android:autofillHints="speed" />
         </LinearLayout>
 
         <LinearLayout
@@ -107,30 +97,53 @@
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="@string/node_id_label"
-                android:labelFor="@+id/node_id_field"
+                android:text="@string/width"
+                android:layout_gravity="center_vertical"
+                android:labelFor="@+id/width_field"
                 />
             <EditText
-                android:id="@+id/node_id_field"
+                android:id="@+id/width_field"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:ems="10"
                 android:inputType="number"
-                android:text=""
-                android:autofillHints="node_id" />
-            <Button
-                android:id="@+id/nodes_browse_button"
-                android:layout_width="wrap_content"
+                android:text="10"
+                android:autofillHints="width"
+                android:layout_weight="1"
+                tools:ignore="HardcodedText" />
+            <TextView
                 android:layout_height="wrap_content"
-                android:minHeight="0dp"
-                android:minWidth="0dp"
-                android:onClick="browseNodes"
-                android:text="@string/browse_button_label"
-                android:layout_gravity="end|center_vertical" />
+                android:layout_width="wrap_content"
+                android:text="@string/color"
+                android:layout_gravity="center_vertical"
+                android:labelFor="@+id/color_field"
+                />
+            <TextView
+                android:id="@+id/color"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_marginHorizontal="10dp"
+                android:background="#000000"
+                android:layout_gravity="center"
+                android:text="" />
+            <EditText
+                android:id="@+id/color_field"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:ems="10"
+                android:inputType="text"
+                android:text="#000000"
+                android:autofillHints="color"
+                tools:ignore="HardcodedText" />
         </LinearLayout>
 
-
+        <CheckBox
+            android:id="@+id/is_enabled_checkbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/is_enabled_checkbox_label"
+            android:checked="true"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -140,6 +153,7 @@
             android:layout_gravity="bottom|end"
             android:onClick="confirmButtonClicked"
             />
+
 
     </LinearLayout>
 
