--- a/app/src/main/res/layout/activity_links_edit.xml
+++ b/app/src/main/res/layout/activity_links_edit.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.database.editors.LocationsEditActivity">
+    tools:context=".activities.database.editors.LinksEditActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,67 +35,25 @@
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="@string/name"
-                android:labelFor="@+id/name_field"
+                android:text="@string/from_node_label"
+                android:labelFor="@+id/from_node_id_field"
                 />
             <EditText
-                android:id="@+id/name_field"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="text"
-                android:text=""
-                android:autofillHints="name" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_height="0dp"
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1">
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/description"
-                android:gravity="top"
-                android:labelFor="@+id/desc_field"
-                />
-            <EditText
-                android:id="@+id/desc_field"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textMultiLine"
-                android:text=""
-                android:autofillHints="description" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/type_id_label"
-                android:labelFor="@+id/type_id_field"
-                />
-            <EditText
-                android:id="@+id/type_id_field"
+                android:id="@+id/from_node_id_field"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="number"
                 android:text=""
-                android:autofillHints="type_id" />
+                android:autofillHints="from_node_id" />
             <Button
-                android:id="@+id/types_browse_button"
+                android:id="@+id/from_node_browse_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minHeight="0dp"
                 android:minWidth="0dp"
-                android:onClick="browseTypes"
+                android:onClick="browseFromNodes"
                 android:text="@string/browse_button_label"
                 android:layout_gravity="end|center_vertical" />
         </LinearLayout>
@@ -107,30 +65,80 @@
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="@string/node_id_label"
-                android:labelFor="@+id/node_id_field"
+                android:text="@string/to_node_label"
+                android:labelFor="@+id/to_node_id_field"
                 />
             <EditText
-                android:id="@+id/node_id_field"
+                android:id="@+id/to_node_id_field"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="number"
                 android:text=""
-                android:autofillHints="node_id" />
+                android:autofillHints="to_node_id" />
             <Button
-                android:id="@+id/nodes_browse_button"
+                android:id="@+id/to_node_browse_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minHeight="0dp"
                 android:minWidth="0dp"
-                android:onClick="browseNodes"
+                android:onClick="browseToNodes"
                 android:text="@string/browse_button_label"
                 android:layout_gravity="end|center_vertical" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/link_type_id_label"
+                android:labelFor="@+id/link_type_id_field"
+                />
+            <EditText
+                android:id="@+id/link_type_id_field"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="number"
+                android:text=""
+                android:autofillHints="link_type_id" />
+            <Button
+                android:id="@+id/link_type_browse_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:onClick="browseLinkTypes"
+                android:text="@string/browse_button_label"
+                android:layout_gravity="end|center_vertical" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/modifier_label"
+                android:labelFor="@+id/modifier_field"
+                />
+            <EditText
+                android:id="@+id/modifier_field"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="numberDecimal"
+                android:text="1.0"
+                android:autofillHints="modifier"
+                tools:ignore="HardcodedText" />
+        </LinearLayout>
 
         <Button
             android:layout_width="wrap_content"
@@ -140,6 +148,7 @@
             android:layout_gravity="bottom|end"
             android:onClick="confirmButtonClicked"
             />
+
 
     </LinearLayout>
 
