--- a/app/src/main/res/layout/activity_nodes_edit.xml
+++ b/app/src/main/res/layout/activity_nodes_edit.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.database.editors.LocationsEditActivity">
+    tools:context=".activities.database.editors.NodesEditActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,6 +70,7 @@
                 android:autofillHints="description" />
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
@@ -77,27 +78,17 @@
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="@string/type_id_label"
-                android:labelFor="@+id/type_id_field"
+                android:text="@string/coordinate_x_label"
+                android:labelFor="@+id/coordinate_x_field"
                 />
             <EditText
-                android:id="@+id/type_id_field"
-                android:layout_width="0dp"
+                android:id="@+id/coordinate_x_field"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number"
+                android:inputType="numberDecimal|numberSigned"
                 android:text=""
-                android:autofillHints="type_id" />
-            <Button
-                android:id="@+id/types_browse_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minHeight="0dp"
-                android:minWidth="0dp"
-                android:onClick="browseTypes"
-                android:text="@string/browse_button_label"
-                android:layout_gravity="end|center_vertical" />
+                android:autofillHints="coordinate_x" />
         </LinearLayout>
 
         <LinearLayout
@@ -107,30 +98,18 @@
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="@string/node_id_label"
-                android:labelFor="@+id/node_id_field"
+                android:text="@string/coordinate_y_label"
+                android:labelFor="@+id/coordinate_y_field"
                 />
             <EditText
-                android:id="@+id/node_id_field"
-                android:layout_width="0dp"
+                android:id="@+id/coordinate_y_field"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number"
+                android:inputType="numberDecimal|numberSigned"
                 android:text=""
-                android:autofillHints="node_id" />
-            <Button
-                android:id="@+id/nodes_browse_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minHeight="0dp"
-                android:minWidth="0dp"
-                android:onClick="browseNodes"
-                android:text="@string/browse_button_label"
-                android:layout_gravity="end|center_vertical" />
+                android:autofillHints="coordinate_y" />
         </LinearLayout>
-
-
 
         <Button
             android:layout_width="wrap_content"
