--- a/app/src/main/res/layout/custom_map_fragment_nobtn.xml
+++ b/app/src/main/res/layout/custom_map_fragment_nobtn.xml
@@ -32,40 +32,48 @@
 
         <LinearLayout
             android:id="@+id/linearLayout2"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
             app:layout_constraintStart_toStartOf="@+id/linearLayout3">
 
-            <Button
-                android:id="@+id/zoom_in_button"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                android:text="@string/zoom_in"
-                android:textSize="20sp"
-                android:visibility="gone" />
 
-            <Button
-                android:id="@+id/zoom_out_button"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                android:text="@string/zoom_out"
-                android:textSize="20sp"
-                android:visibility="gone" />
 
-            <CheckBox
-                android:id="@+id/markersCheckBox"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                android:text="@string/display_markers_checkbox_label" />
+                <Button
+                    android:id="@+id/zoom_in_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    android:text="@string/zoom_in"
+                    android:textSize="20sp"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/zoom_out_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    android:text="@string/zoom_out"
+                    android:textSize="20sp"
+                    android:visibility="gone" />
+
+                <CheckBox
+                    android:id="@+id/markersCheckBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:text="@string/display_markers_checkbox_label" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -92,6 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:orientation="vertical"
             android:gravity="center"
             app:layout_constrainedHeight="true"
             app:layout_constrainedWidth="true"
@@ -103,13 +112,62 @@
             <com.ionshield.planner.map.CustomMapView
                 android:id="@+id/map_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_height="0dp"
                 android:background="#333"
                 app:arrowLength="8dp"
                 app:displayMarkers="false"
                 app:nodeRadius="4dp"
                 app:selectedNodeColor="#ffaa33"
                 app:selectionExtraRadius="15dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/coordinate_x_label"
+                    android:gravity="end"/>
+                <TextView
+                    android:id="@+id/position_x"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:text="0"
+                    android:gravity="start"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/coordinate_y_label"
+                    android:gravity="end"/>
+                <TextView
+                    android:id="@+id/position_y"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:text="0"
+                    android:gravity="start"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/scale_label"
+                    android:gravity="end"/>
+                <TextView
+                    android:id="@+id/scale"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:text="1"
+                    android:gravity="start"/>
+
+
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
