--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,10 +45,19 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/use_planner_button"
+                    android:id="@+id/plan_button"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="0dp"
+                    android:text="@string/plan_button_label"
+                    android:textSize="30sp"/>
+
+                <Button
+                    android:id="@+id/use_planner_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
                     android:onClick="useButtonClicked"
                     android:text="@string/location_finder_button_label"
                     android:textSize="30sp" />
@@ -72,7 +81,37 @@
                     android:textSize="30sp" />
             </LinearLayout>
         </ScrollView>
-
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
+            android:layout_gravity="center">
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/current_plan_label"/>
+            <TextView
+                android:id="@+id/selected_plan_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/current_plan_none"
+                />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:onClick="planSelectButtonClicked"
+                android:text="@string/select_button_label"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:onClick="planListButtonClicked"
+                android:text="@string/list_button_label"/>
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
