--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -36,7 +36,7 @@
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
         tools:context=".fragments.list.ListEventFragment"
-        tools:listevent="@layout/fragment_event" />
+        tools:listitem="@layout/fragment_event" />
 
     <LinearLayout
         android:layout_width="match_parent"
