--- a/app/src/main/res/layout/plan_menu_fragment.xml
+++ b/app/src/main/res/layout/plan_menu_fragment.xml
@@ -44,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:minWidth="24dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginTop="3dp"
 
                 app:icon="@drawable/ic_baseline_view_list_24"
                 style="@style/Widget.App.Button.IconOnly"
@@ -57,6 +58,7 @@
                 android:layout_height="wrap_content"
                 android:minWidth="24dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginTop="3dp"
 
                 app:icon="@drawable/ic_baseline_mode_edit_24"
                 style="@style/Widget.App.Button.OutlinedButton.IconOnly"
@@ -77,6 +79,7 @@
                 app:iconGravity="top"
                 android:text="@string/notes_button_label"
                 android:textSize="18sp"
+                android:enabled="false"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
 
 
@@ -93,6 +96,7 @@
                 app:iconGravity="top"
                 android:text="@string/events_button_label"
                 android:textSize="18sp"
+                android:enabled="false"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
 
                 app:layout_constraintBottom_toBottomOf="@+id/notes_button"
@@ -108,6 +112,7 @@
                 app:iconGravity="top"
                 android:text="@string/constraints_button_label"
                 android:textSize="18sp"
+                android:enabled="false"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
 
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -123,6 +128,7 @@
                 app:iconGravity="top"
                 android:text="@string/calendar_button_label"
                 android:textSize="18sp"
+                android:enabled="false"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
 
                 app:layout_constraintBottom_toBottomOf="@+id/constraints_button"
@@ -138,6 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_margin="10dp"
+            android:enabled="false"
             app:icon="@drawable/ic_baseline_double_arrow_48"
             style="@style/Widget.App.Button.IconOnly"
             />
