--- a/app/src/main/res/layout/type_item_ref_edit_dialog_fragment.xml
+++ b/app/src/main/res/layout/type_item_ref_edit_dialog_fragment.xml
@@ -67,6 +67,7 @@
                     android:minHeight="24dp"
                     android:minWidth="24dp"
                     android:layout_gravity="end|center_vertical"
+                    android:layout_marginVertical="5dp"
 
                     app:icon="@drawable/ic_baseline_view_list_48"
                     style="@style/Widget.App.Button.OutlinedButton.IconOnly"
@@ -105,6 +106,7 @@
                     android:minHeight="24dp"
                     android:minWidth="24dp"
                     android:layout_gravity="end|center_vertical"
+                    android:layout_marginVertical="5dp"
 
                     app:icon="@drawable/ic_baseline_view_list_48"
                     style="@style/Widget.App.Button.OutlinedButton.IconOnly"
